fixed display in dark mode and add key press from keyboard

--- a/style.css
+++ b/style.css
@@ -44,11 +44,11 @@ body {
     z-index: 1;
 }
 
-.theme-toggler.active {
+.active {
     color: #333;
 }
 
-.theme-toggler.active::before {
+.active::before {
     background-color: #fff;
 }
 
@@ -109,6 +109,7 @@ button#equal {
 
 .calculator#display {
     color: #0a1e23;
+
 }
 
 .calculator button#clear {
@@ -116,47 +117,47 @@ button#equal {
     color: #fc4552;
 }
 
-.calculatot button.btn-number {
+.calculator button.btn-number {
     background-color: #c3eaff;
     color: #000;
 }
 
-.calculatot button.btn-operator {
+.calculator button.btn-operator {
     background-color: #ffd0fd;
     color: #f967f3;
 }
 
-.calculatot button.btn-equal {
+.calculator button.btn-equal {
     background-color: #adf9e7;
     color: #000;
 }
 
 /* dark theme */
 
-.calculator.dark {
+.dark {
     background-color: #071115;
 }
 
-.calculator.dark #dislpay {
+.dark .screen {
     color: #f8fafd;
 }
 
-.calculator.dark button#clear {
+.dark button#clear {
     background-color: #2d191e;
     color: #bd3740;
 }
 
-.calculator.dark button.btn-number {
+.dark button.btn-number {
     background-color: #1b2f38;
     color: #f8fafb;
 }
 
-.calculator.dark button.btn-operator {
+.dark button.btn-operator {
     background-color: #2e1f39;
     color: #aa00a4;
 }
 
-.calculator.dark button.btn-equal {
+.dark button.btn-equal {
     background-color: #223323;
     color: #ffffff;
 }
